force-app/main/default/objects/Asset/fields/Asset_Availability__c.field-meta.xml
<CustomField>
    <fullName>Asset_Availability__c</fullName>
    <label>Asset Availability</label>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>