force-app/main/default/objects/Asset/fields/Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Asset_Class__c</fullName>
    <label>Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class II</fullName>
            </value>
            <value>
                <fullName>Class III</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>