force-app/main/default/objects/Asset/fields/Asset_Level__c.field-meta.xml
<CustomField>
    <fullName>Asset_Level__c</fullName>
    <label>Main Asset</label>
    <type>Checkbox</type>
    <formula>ISBLANK(ParentId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>