force-app/main/default/objects/Asset/fields/Cabinet_Model__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Model__c</fullName>
    <label>Cabinet Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Neptune Single</fullName>
            </value>
            <value>
                <fullName>Neptune Dual</fullName>
            </value>
            <value>
                <fullName>MarsX Upright GEN9</fullName>
            </value>
            <value>
                <fullName>Helix XT</fullName>
            </value>
            <value>
                <fullName>System 7000</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>