force-app/main/default/objects/Asset/fields/Location_on_Floor__c.field-meta.xml
<CustomField>
    <fullName>Location_on_Floor__c</fullName>
    <label>Location on Floor</label>
    <type>Text</type>
    <length>100</length>
</CustomField>